--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 #Datasource
 spring.datasource.url=jdbc:postgresql://localhost:5432/rgbColor
-spring.datasource.username=archie
+spring.datasource.username=${DbUser}
+spring.datasource.password=${DbPassword}
 
 #JPA
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 
 #Hikari
 spring.datasource.hikari.minimumIdle=1
