--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #Datasource
-spring.datasource.url=jdbc:postgresql://localhost:5432/rgbColor
+#spring.datasource.url=jdbc:postgresql://localhost:5432/rgbColor
+spring.datasource.url=jdbc:postgresql://localhost:5432/${DbName}
 spring.datasource.username=${DbUser}
 spring.datasource.password=${DbPassword}
 
